--- a/Test bench/Tesla_UI/TeslaUI/qml.qrc
+++ b/Test bench/Tesla_UI/TeslaUI/qml.qrc
@@ -4,5 +4,7 @@
         <file>ui/BottomBar/BottomBar.qml</file>
         <file>ui/RightScreen/RightScreen.qml</file>
         <file>ui/LeftScreen/LeftScreen.qml</file>
+        <file>ui/assets/carRender.png</file>
+        <file>ui/assets/carSettingsIcon.png</file>
     </qresource>
 </RCC>
