Lock/unlock, clock & user

--- a/Test bench/Tesla_UI/TeslaUI/qml.qrc
+++ b/Test bench/Tesla_UI/TeslaUI/qml.qrc
@@ -6,5 +6,7 @@
         <file>ui/LeftScreen/LeftScreen.qml</file>
         <file>ui/assets/carRender.png</file>
         <file>ui/assets/carSettingsIcon.png</file>
+        <file>ui/assets/lock.png</file>
+        <file>ui/assets/unlock.png</file>
     </qresource>
 </RCC>
